--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,17 @@
 {erl_opts, [debug_info]}.
 {deps, [
-    {jwerl, {git, "https://github.com/G-Corp/jwerl", {tag, "1.1.0"}}},
-    {cowboy, {git, "https://github.com/ninenines/cowboy.git"}}
+    {bson, ".*", {git, "git://github.com/comtihon/bson-erlang", {tag, "v0.2.3"}}},
+    {jwerl, {git, "https://github.com/G-Corp/jwerl", {tag, "v1.1.0"}}},
+    {cowboy, {git, "https://github.com/ninenines/cowboy.git", {tag, "2.8.0"}}},
+    {mongodb, ".*", {git, "git://github.com/comtihon/mongodb-erlang", {tag, "v3.2.0"}}}, %not official driver, but the one official is based on
+    {jiffy, ".*", {git,"https://github.com/davisp/jiffy", {tag, "1.0.8"}}}
   ]}.
 
-{relx, [{release, {gen_rest_api, "0.1.0"},
-         [gen_rest_api,
-          cowboy,
-          sasl]},
+{relx, [{
+          release,
+          {gen_rest_api, "0.1.0"},
+          [gen_rest_api, cowboy, sasl]
+        },
 
         {mode, dev},
 
