--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, [
+    {bcrypt, "1.1.2"},
     {bson, ".*", {git, "git://github.com/comtihon/bson-erlang", {tag, "v0.2.3"}}},
     {jwerl, {git, "https://github.com/G-Corp/jwerl", {tag, "v1.1.0"}}},
     {cowboy, {git, "https://github.com/ninenines/cowboy.git", {tag, "2.8.0"}}},
